--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 __pycache__/
+/.auto/
+/notes.aux
+/notes.bbl
+/notes.bcf
+/notes.blg
+/notes.log
+/notes.out
+/notes.pdf
+/notes.run.xml
+/notes.synctex.gz
